# weld-ai

./: .gitignore  README.md  build.spec  pyproject.toml
docs/: standards_sources.md
scripts/: build_exe.bat
src/: run.py
src/weldai/: __init__.py  main.py  tests_demo.py
src/weldai/assets/: __init__.py
src/weldai/domain/: __init__.py  base_metal.py  consumable.py  cost.py  enums.py  joint.py  procedure.py  weld_seam.py  welder.py
src/weldai/engine/: __init__.py  actions.py  ai_engine.py  cost_engine.py  coverage_engine.py  factor_engine.py  pqr_matcher.py  welder_engine.py
src/weldai/persistence/: __init__.py  models.py  repositories.py  session.py
src/weldai/services/: __init__.py  batch_service.py  config_service.py  doc_templates.py  export_service.py  font_provider.py  groove_renderer.py  llm_service.py
src/weldai/standards/: __init__.py  base.py  loader.py  nbt47014_2023.py  registry.py
src/weldai/ui/: __init__.py  _screen.py  ai_view.py  consumable_view.py  cost_view.py  groove_designer.py  main_window.py  pqr_match_dialog.py  procedure_dialog.py  settings_dialog.py  trace_view.py  welder_dialog.py  welder_view.py
src/weldai/utils/: __init__.py  paths.py
tests/: conftest.py  test_ai_engine.py  test_batch_service.py  test_consumable_repository.py  test_cost_engine.py  test_coverage_engine.py  test_cross_process.py  test_doc_enhanced.py  test_doc_templates.py  test_factor_engine.py  test_groove_renderer.py  test_llm_service.py  test_pqr_matcher.py  test_repositories.py  test_stage2_data.py  test_stage2b_data.py  test_trace.py  test_welder.py
(+10 files in other folders)
